--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,10 @@ dependencies {
     testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0"
     testCompile(group: 'org.powermock', name: 'powermock-core', version: '1.6.6')
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.0"
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
     compile 'org.antlr:antlr4-runtime:4.7'
+    compile 'org.ow2.asm:asm-debug-all:5.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
     antlr4 'org.antlr:antlr4:4.7'
 }
 
