--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,13 @@ buildscript {
         // maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
     dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
     }
 }
 
-
+plugins {
+    id 'com.github.johnrengelman.shadow' version '2.0.2'
+}
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'maven'
 apply plugin: 'java'
@@ -23,7 +25,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 jacoco {
-    toolVersion = "0.7.6.201602180812"
+    toolVersion = "0.7.9"
 }
 
 ext.antlr = [
@@ -93,19 +95,27 @@ repositories {
 }
 
 dependencies {
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0"
-    testCompile(group: 'org.powermock', name: 'powermock-core', version: '1.6.6')
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.0"
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
-    compile 'org.antlr:antlr4-runtime:4.7'
-    compile 'org.ow2.asm:asm-debug-all:5.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
+    testCompile "org.junit.jupiter:junit-jupiter-api:5.0.2"
+    testCompile(group: 'org.powermock', name: 'powermock-core', version: '1.7.3')
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.2"
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
+    compile 'org.antlr:antlr4-runtime:4.7.1'
+    compile 'org.ow2.asm:asm:6.0'
+    compile 'org.ow2.asm:asm-commons:6.0'
+    compile 'org.ow2.asm:asm-tree:6.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
     compile 'cpw.mods:modlauncher:0.1-SNAPSHOT:api'
     mlserviceCompile 'cpw.mods:modlauncher:0.1-SNAPSHOT:api'
-    antlr4 'org.antlr:antlr4:4.7'
+    antlr4 'org.antlr:antlr4:4.7.1'
 }
-
-
+// Shadow Jar with antlr embedded
+shadowJar {
+    dependencies {
+        exclude(dependency {
+            it.moduleName != 'antlr4-runtime'
+        })
+    }
+}
 uploadArchives {
     repositories.mavenDeployer {
         if (project.hasProperty('forgeMavenPassword'))
