--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 
 plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.2'
+    id 'org.ajoberstar.grgit' version '2.1.1'
 }
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'maven'
@@ -71,6 +72,17 @@ task mlserviceJar(type: Jar) {
     classifier = 'service'
     from sourceSets.main.output
     from sourceSets.mlservice.output
+    manifest {
+        attributes(["Specification-Title": "accesstransformer",
+                    "Specification-Vendor": "Forge",
+                    "Specification-Version": "1", // We are version 1 of the modlauncher specification
+                    "Implementation-Title": project.name,
+                    "Implementation-Version": version,
+                    "Implementation-Vendor" :"Forge",
+                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                    "Git-Commit": grgit.head().getAbbreviatedId(8),
+                    "Git-Branch": grgit.branch.getCurrent().getName() ], "accesstransformer")
+    }
 }
 
 task testsJar(type: Jar) {
@@ -109,6 +121,7 @@ dependencies {
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.2"
     testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
     testRuntime sourceSets.testJars.runtimeClasspath
+    testRuntime sourceSets.mlservice.output
     compile 'org.antlr:antlr4-runtime:4.7.1'
     compile 'org.ow2.asm:asm:6.0'
     compile 'org.ow2.asm:asm-commons:6.0'
