--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ task mlserviceJar(type: Jar) {
                     "Implementation-Vendor" :"Forge",
                     "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                     "Git-Commit": grgit.head().getAbbreviatedId(8),
-                    "Git-Branch": grgit.branch.getCurrent().getName() ], "cpw.mods.accesstransformer")
+                    "Git-Branch": grgit.branch.getCurrent().getName() ], "cpw.mods.accesstransformer.service")
     }
 }
 
