Let's tidy up our manifest a bit and give a useful implementation number

--- a/build.gradle
+++ b/build.gradle
@@ -73,15 +73,16 @@ task mlserviceJar(type: Jar) {
     from sourceSets.main.output
     from sourceSets.mlservice.output
     manifest {
-        attributes(["Specification-Title": "accesstransformer",
+        attributes(["Specification-Title": "accesstransformers",
                     "Specification-Vendor": "Forge",
-                    "Specification-Version": "1", // We are version 1 of the accesstransformer specification
+                    "Specification-Version": "1", // Currently version 1 of the accesstransformer specification
                     "Implementation-Title": project.name,
-                    "Implementation-Version": version,
+                    "Implementation-Version": "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().getAbbreviatedId(8)}",
                     "Implementation-Vendor" :"Forge",
                     "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                     "Git-Commit": grgit.head().getAbbreviatedId(8),
-                    "Git-Branch": grgit.branch.getCurrent().getName() ], "cpw/mods/accesstransformer/service/")
+                    "Git-Branch": grgit.branch.getCurrent().getName() ],
+                "cpw/mods/accesstransformer/service/")
     }
 }
 
