--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath group: 'com.cinnober.gradle', name: 'semver-git', version: '2.4.0'
+    }
+}
 plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.4'
     id 'org.ajoberstar.grgit' version '2.2.1'
 }
+apply plugin: 'com.cinnober.gradle.semver-git'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'java-library'
@@ -9,7 +18,6 @@ apply plugin: 'eclipse'
 apply plugin: 'jacoco'
 
 group 'cpw.mods'
-version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
