--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,8 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'com.cinnober.gradle', name: 'semver-git', version: '2.4.0'
-    }
-}
 plugins {
+    id 'org.ajoberstar.reckon' version '0.7.0'
     id 'com.github.johnrengelman.shadow' version '2.0.4'
     id 'org.ajoberstar.grgit' version '2.2.1'
 }
-apply plugin: 'com.cinnober.gradle.semver-git'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'java-library'
@@ -25,6 +17,13 @@ targetCompatibility = 1.8
 jacoco {
     toolVersion = "0.8.1"
 }
+
+reckon {
+    scopeFromProp()
+    stageFromProp('milestone', 'rc', 'final')
+}
+
+reckonTagCreate.dependsOn check
 
 test {
     useJUnitPlatform()
