--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.ajoberstar.reckon' version '0.7.0'
+    id 'org.ajoberstar.reckon' version '0.8.0'
     id 'com.github.johnrengelman.shadow' version '2.0.4'
     id 'org.ajoberstar.grgit' version '2.2.1'
 }
@@ -142,6 +142,7 @@ shadowJar {
     from sourceSets.mlservice.output
     manifest {
         inheritFrom mlserviceJar.manifest
+        attributes('Main-Class': 'cpw.mods.accesstransformer.TransformerProcessor')
     }
     dependencies {
         exclude(dependency {
@@ -202,11 +203,15 @@ publishing {
     }
     repositories {
         maven {
-            credentials {
-                username project.properties.forgeMavenUser?:'fake'
-                password project.properties.forgeMavenPassword?:'news'
+            if (project.hasProperty('mavenPassword')) {
+                credentials {
+                    username project.properties.forgeMavenUser
+                    password project.properties.forgeMavenPassword
+                }
+                url 'http://files.minecraftforge.net/maven/manage/upload'
+            } else {
+                url 'file://' + rootProject.file('repo').getAbsolutePath()
             }
-            url "http://files.minecraftforge.net/maven/manage/upload"
         }
     }
 }
