Fix NPE and maven publish.

--- a/build.gradle
+++ b/build.gradle
@@ -203,7 +203,7 @@ publishing {
     }
     repositories {
         maven {
-            if (project.hasProperty('mavenPassword')) {
+            if (project.hasProperty('forgeMavenPassword')) {
                 credentials {
                     username project.properties.forgeMavenUser
                     password project.properties.forgeMavenPassword
