--- a/build.gradle
+++ b/build.gradle
@@ -149,7 +149,22 @@ shadowJar {
             it.moduleName != 'antlr4-runtime'
         })
     }
+}
 
+task fatJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
+    classifier = 'fatjar'
+    from sourceSets.main.output
+    from sourceSets.mlservice.output
+    configurations = shadowJar.configurations
+    manifest {
+        inheritFrom mlserviceJar.manifest
+        attributes('Main-Class': 'cpw.mods.accesstransformer.TransformerProcessor')
+    }
+    dependencies {
+        exclude(dependency {
+            it.moduleName == 'antlr4'
+        })
+    }
 }
 
 artifacts {
@@ -158,6 +173,7 @@ artifacts {
     archives testsJar
     archives mlserviceJar
     archives shadowJar
+    archives fatJar
 }
 
 publishing {
@@ -166,6 +182,7 @@ publishing {
             from components.java
             artifact sourcesJar
             artifact shadowJar
+            artifact fatJar
             artifact mlserviceJar
             pom {
                 name = 'Access Transformers'
