--- a/build.gradle
+++ b/build.gradle
@@ -117,11 +117,13 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.2.+")
     testImplementation("org.powermock:powermock-core:1.7.+")
     testImplementation("cpw.mods:modlauncher:0.1+")
+    testImplementation("com.google.code.gson:gson:2.8.5")
     testCompileOnly(sourceSets.mlservice.output)
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.+")
     testRuntime("org.apache.logging.log4j:log4j-core:2.11.+")
     testRuntime(sourceSets.testJars.runtimeClasspath)
     testRuntime(sourceSets.mlservice.output)
+    implementation(sourceSets.antlr4.output)
     implementation("org.antlr:antlr4-runtime:4.7.1")
     implementation("net.sf.jopt-simple:jopt-simple:5.0.4")
     implementation("org.ow2.asm:asm:6.2")
