--- a/src/test/resources/test_at.cfg
+++ b/src/test/resources/test_at.cfg
@@ -1,6 +1,6 @@
-public-f cpw.mods.accesstransformer.testJar.ATTestClass finalPrivateField
-protected cpw.mods.accesstransformer.testJar.ATTestClass privateField
+public-f net.minecraftforge.accesstransformer.testJar.ATTestClass finalPrivateField
+protected net.minecraftforge.accesstransformer.testJar.ATTestClass privateField
 
-public cpw.mods.accesstransformer.testJar.ATTestClass privateMethod()V
+public net.minecraftforge.accesstransformer.testJar.ATTestClass privateMethod()V
 
-public cpw.mods.accesstransformer.testJar.DefaultClass
+public net.minecraftforge.accesstransformer.testJar.DefaultClass
