Apply access changes to InnerClassAttribute as well for inner classes.

--- a/src/test/resources/test_at.cfg
+++ b/src/test/resources/test_at.cfg
@@ -4,3 +4,5 @@ protected net.minecraftforge.accesstransformer.testJar.ATTestClass privateField
 public net.minecraftforge.accesstransformer.testJar.ATTestClass privateMethod()V
 
 public net.minecraftforge.accesstransformer.testJar.DefaultClass
+
+public net.minecraftforge.accesstransformer.testJar.DefaultClass$Inner
