--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
-    id 'org.ajoberstar.reckon' version '0.8.0'
-    id 'com.github.johnrengelman.shadow' version '2.0.4'
-    id 'org.ajoberstar.grgit' version '2.2.1'
+    id 'org.ajoberstar.reckon' version '0.9.0'
+    id 'org.ajoberstar.grgit' version '3.0.0'
+    id 'com.github.johnrengelman.shadow' version '4.0.3'
+    id 'com.github.ben-manes.versions' version '0.20.0'
 }
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
@@ -24,6 +27,19 @@ reckon {
 }
 
 reckonTagCreate.dependsOn check
+
+dependencyUpdates.resolutionStrategy {
+    componentSelection { rules ->
+        rules.all { ComponentSelection selection ->
+            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview'].any { qualifier ->
+                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
+            }
+            if (rejected) {
+                selection.reject('Release candidate')
+            }
+        }
+    }
+}
 
 test {
     useJUnitPlatform()
@@ -73,16 +89,16 @@ ext.sharedManifest = manifest {
                 'Specification-Vendor': 'Forge',
                 'Specification-Version': '1', // Currently version 1 of the accesstransformer specification
                 'Implementation-Title': project.name,
-                'Implementation-Version': "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().getAbbreviatedId(8)}",
+                'Implementation-Version': "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().abbreviatedId}",
                 'Implementation-Vendor': 'Forge',
                 'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'Git-Commit': grgit.head().getAbbreviatedId(8),
+                'Git-Commit': grgit.head().abbreviatedId,
                 'Git-Branch': grgit.branch.current().getName() ],
             'net/minecraftforge/accesstransformer/service/')
 }
 
 task mlserviceJar(type: Jar) {
-    classifier = 'service'
+    archiveClassifier = 'service'
     from sourceSets.main.output
     from sourceSets.mlservice.output
     manifest = project.manifest {
@@ -91,12 +107,12 @@ task mlserviceJar(type: Jar) {
 }
 
 task testsJar(type: Jar) {
-    classifier = 'testsjar'
+    archiveClassifier = 'testsjar'
     from sourceSets.testJars.output
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
     from sourceSets.mlservice.allSource
 }
@@ -114,32 +130,32 @@ repositories {
 }
 
 dependencies {
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.+')
-    testImplementation('org.powermock:powermock-core:1.7.+')
-    testImplementation('cpw.mods:modlauncher:0.1+')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.+')
+    testImplementation('org.powermock:powermock-core:2.0+')
+    testImplementation('cpw.mods:modlauncher:0.6+')
     testImplementation('com.google.code.gson:gson:2.8.5')
     testCompileOnly(sourceSets.mlservice.output)
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.+')
-    testRuntime('org.apache.logging.log4j:log4j-core:2.11.+')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.+')
     testRuntime(sourceSets.testJars.runtimeClasspath)
     testRuntime(sourceSets.mlservice.output)
     implementation(sourceSets.antlr4.output)
-    implementation('org.antlr:antlr4-runtime:4.7.1')
+    implementation('org.antlr:antlr4-runtime:4.7.2')
     implementation('net.sf.jopt-simple:jopt-simple:5.0.4')
     implementation('org.ow2.asm:asm:6.2')
     implementation('org.ow2.asm:asm-commons:6.2')
     implementation('org.ow2.asm:asm-tree:6.2')
     implementation('org.apache.logging.log4j:log4j-api:2.11.+')
-    implementation('cpw.mods:modlauncher:0.1+:api')
-    mlserviceImplementation('cpw.mods:modlauncher:0.1+:api')
+    implementation('org.apache.logging.log4j:log4j-core:2.11.+')
+    implementation('cpw.mods:modlauncher:0.6+:api')
+    mlserviceImplementation('cpw.mods:modlauncher:0.6+:api')
     mlserviceImplementation(sourceSets.main.output)
-    antlr4Compile('org.antlr:antlr4:4.7.1')
+    antlr4Compile('org.antlr:antlr4:4.7.2')
 }
 
 
 // Shadow Jar with antlr embedded
 shadowJar {
-    classifier = 'shadowed'
+    archiveClassifier = 'shadowed'
     from sourceSets.main.output
     from sourceSets.mlservice.output
     manifest {
@@ -153,8 +169,8 @@ shadowJar {
     }
 }
 
-task fatJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
-    classifier = 'fatjar'
+task fatJar(type: ShadowJar) {
+    archiveClassifier = 'fatjar'
     from sourceSets.main.output
     from sourceSets.mlservice.output
     configurations = shadowJar.configurations
@@ -222,15 +238,11 @@ publishing {
     }
     repositories {
         maven {
-            if (project.hasProperty('forgeMavenPassword')) {
-                credentials {
-                    username project.properties.forgeMavenUser
-                    password project.properties.forgeMavenPassword
-                }
-                url 'http://files.minecraftforge.net/maven/manage/upload'
-            } else {
-                url 'file://' + rootProject.file('repo').getAbsolutePath()
+            credentials {
+                username project.properties.forgeMavenUser?:'fake'
+                password project.properties.forgeMavenPassword?:'news'
             }
+            url 'http://files.minecraftforge.net/maven/manage/upload'
         }
     }
 }
@@ -243,5 +255,5 @@ generateGrammarSource {
     main = 'org.antlr.v4.Tool'
     classpath = configurations.antlr4Compile
     def pkg = antlr.grammarpackage.replaceAll("\\.", "/")
-    args = ['-o', "${antlr.destinationDir}/${pkg}", '-visitor', '-package', antlr.grammarpackage, grammars.files].flatten()
+    args = ["-o", "${antlr.destinationDir}/${pkg}", '-visitor', '-package', antlr.grammarpackage, grammars.files].flatten()
 }
