--- a/build.gradle
+++ b/build.gradle
@@ -142,7 +142,7 @@ repositories {
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.+')
     testImplementation('org.powermock:powermock-core:2.0+')
-    testImplementation('cpw.mods:modlauncher:0.10.+')
+    testImplementation('cpw.mods:modlauncher:1.0.+')
     testImplementation('com.google.code.gson:gson:2.8.5')
     testCompileOnly(sourceSets.mlservice.output)
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.+')
@@ -156,8 +156,10 @@ dependencies {
     implementation('org.ow2.asm:asm-tree:6.2')
     implementation('org.apache.logging.log4j:log4j-api:2.11.+')
     implementation('org.apache.logging.log4j:log4j-core:2.11.+')
-    implementation('cpw.mods:modlauncher:0.10.+:api')
-    mlserviceImplementation('cpw.mods:modlauncher:0.10.+:api')
+    implementation('cpw.mods:modlauncher:1.0.+:api')
+    implementation('cpw.mods:modlauncher:1.0.+')
+    mlserviceImplementation('cpw.mods:modlauncher:1.0.+:api')
+    mlserviceImplementation('cpw.mods:modlauncher:1.0.+')
     mlserviceImplementation(sourceSets.main.output)
     antlr4Compile('org.antlr:antlr4:4.7.2')
 }
